src/objects/PosPotential__c.object
<CustomObject>
    <fields>
        <fullName>AuditResult__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuditResult</label>
        <referenceTo>AuditResult__c</referenceTo>
        <relationshipName>Potentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialType__c</fullName>
        <label>PotentialType</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
		<fullName>ProductId__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>ProductId</label>
		<referenceTo>Product2</referenceTo>
		<relationshipLabel>PosPotentials</relationshipLabel>
		<relationshipName>PosPotentials</relationshipName>
		<type>Lookup</type>
	</fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UIControlId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIControlId</label>
        <referenceTo>UIControl__c</referenceTo>
        <relationshipLabel>PosPotentials</relationshipLabel>
        <relationshipName>PosPotentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PosPotential</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PosPotentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>